wayland: Check workspace position after creating decoration

If a decoration is created for an already mapped maximized window, check
the workspace position to ensure that the window still fits the maximize
area.

BUG: 432326
(cherry picked from commit ab58171ed857daf842e54f487d37ab4855260061)